# eel

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
.claude/commands/: debug-failing-test-scenario.md
docs/architecture/: design.md  misinformation-plan.md  overview.md  tempo-cost-plan.md
docs/development/: misc.md  search-visualizer-plan.md  testing.md
docs/domain/: hgroup.md
docs/rust/: style.md
gradle/: settings.gradle
gradle/wrapper/: gradle-wrapper.properties
scratchpads/: architecture_findings.md  card_known_playable_leak.md  cheating_leak_refactor_plan.md  critical_exposure_followups.md  current-task.md  discard_risk_modeling_plan.md  draw-order-noise.md  draw_dilution_bias.md  empathy_vs_convention_naming.md  evaluator_marginalization_plan.md  known_playable_silent_zero.md  phantom_play_eval_consistency.md  rollout_outsources_disambiguation.md  search_improvements_plan.md  unify_apply_paths_plan.md
scripts/: diag.sh
src/: lib.rs  main.rs
src/common/: mod.rs  node.rs  tree.rs
src/engine/: action_outcome.rs  action_selection_strategy.rs  decision_tree.rs  dummy_action_selection_strategy.rs  evaluator.rs  game_state_snapshot.rs  knowledge_aware_game_state.rs  mod.rs  play_resolver.rs  signal.rs  (+1 more)
src/game/: clue.rs  (+16 more)
tests/: action_selection_tests.rs  critical_save_tests.rs  delayed_play_clue_tests.rs  direct_play_clue_tests.rs  five_save_tests.rs  replay_regression.rs  scenario_tests.rs  search_regression.rs  simple_finesse_tests.rs  simple_prompt_tests.rs  two_save_tests.rs
(+755 files in other folders)
