[package]
name = "eel"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
smallvec = "1.14.0"
clap = { version = "4.5.39", features = ["derive"] }
mockall = "0.13.1"
bitflags = "2.11.1"
rayon = "1.10"

# [lib]
# // crate-type = ["cdylib"]
