[package]
name = "eel"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.14.0"
clap = { version = "4.6.1", features = ["derive"] }
bitflags = "2.11.1"
rayon = "1.12.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"
webpki-roots = "0.26"
url = "2.5"
futures-util = "0.3"
thiserror = "2"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.14.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
